# SportsAgent

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: agent.py  api.py  mcpserver.py  tools.py
frontend/: App.css  App.tsx  index.html  index.tsx  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
frontend/components/: StatusIndicator.tsx
frontend/services/: api.ts  gemini.ts
