[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "fastapi-mcp>=0.4.0",
    "fastmcp>=2.14.1",
    "google-genai>=1.57.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
    "uvicorn[standard]>=0.38.0",
    "wikipedia-api>=0.8.1",
]
